--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!-- HEADER HTML -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor do mundo"
+    <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor do mundo">
 
     <!-- Inserindo favicon -->
-     <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
 
-     <!-- Link CSS -->
+    <!-- Link CSS -->
       <link rel="stylesheet" href="style.css">
     <title>Café no lar</title>
 </head>
@@ -21,10 +22,7 @@
             <ul class="menu" id="MenuItems">
                 <li><a>HOME</a></li>
                 <li>
-                    <a href="#receitas" style="text-decoration: none; color: #FFF2E780 ;" onmouseover="this.style.color='#FFF2E780';">
-
-                        RECEITAS
-                    </a>
+                    <a href="#receitas" style="text-decoration: none; color: #FFF2E780 ;" onmouseover="this.style.color='#FFF2E780';">RECEITAS</a>
                     
                 </li>
 
@@ -38,38 +36,173 @@
      </header>
 
 
-     <!-- ______________________________________ -->
-      <!-- FOOTER (rodapé) -->
-       <script src="efeitos.js"></script>
-    
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Inserindo favicon -->
-     <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
-
-     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
-    <title>Café no Lar</title>
-</head>
-<body>
-    <!-- SESSÃO PRINCIPAl(main) -->
+     <!-- SESSÃO PRINCIPAl(main) -->
     <main>
         <div class="container">
             <section class="info">
                 <!-- Destaque -->
                  <header class="content">
                     <span class="news marrom">Novidades</span>
+                    <h1>Encontre a receita perfeita!</h1>
+                    <hr/>
+                    <h2 class="subtitle">Explore dezenas de variações da bebida favorita entre os devs ao redor do mundo</h2>
                  </header>
+
+                 <!-- Galeria de imagens -->
+                  <div class="imagens">
+                    <figure>
+                        <img src="assets/imagem-1.png" alt="Imagem 1">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-2.png" alt="Imagem 2">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-3.png" alt="Imagem 3">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-04.png" alt="Imagem 4">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-5.png" alt="Imagem 5">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-6.png" alt="Imagem 6">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-7.png" alt="Imagem 7">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-8.png" alt="Imagem 8">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-9.png" alt="Imagem 9">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-10.png" alt="Imagem 10">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-11.png" alt="Imagem 11">
+                    </figure>
+                    <figure>
+                        <img src="assets/imagem-12.png" alt="Imagem 12">
+                    </figure>
+                  </div>
             </section>
         </div>
-      </main>
+
+        <!-- Botão -->
+         <section class="button">
+            <button type="button">
+                <a href="#receitas"><img src="assets/button.svg" alt=""></a>
+            </button>
+         </section>
+
+
+         <!-- RECEITAS HTML -->
+           <!-- ____________________________ -->
+     <!-- Destaque das Receitas -->
+
+     <section class="receitas" id="receitas">
+        <header class="receitas-content">
+            <span class="news marrom">Receitas</span>
+            <h2 class="receitas-title">Confira as últimas receitas</h2>
+            <p class="receitas-subtitle">Dê uma olhada nas receitas mais amadas!</p>
+        </header>
+
+        <!-- Receitas -->
+         <article>
+
+            <!-- 1° Receita -->
+             <div class="card">
+                <div class="card-2">
+                    <header class="card-3">
+                        <div class="legend">
+                            <span class="news amarelo">em alta 🔥</span>
+                            <h3 class="cappuccino">Cappuccino</h3>
+                        </div>
+                        <p class="avaliacao">Extraordinário - 1/4</p>
+                    </header>
+
+                    <p class="descricao">Delicie-se com a cremosidade e o aroma irresistível do nosso cappuccino. Transforme seus momentos em pura indulgência.☕#CappuccinoPerfeito</p>
+                    <div class="author">
+                        <img src="assets/Avatar.png" alt="Lara Silva">
+                        <span class="">Lara Silva</span>
+                    </div>
+                </div>
+             </div>
+
+             <!-- 2° Receita -->
+              <div class="card">
+                <div class="card-2">
+                    <header class="card-3">
+                        <div class="legend">
+                            <span class="news amarelo">em alta🔥</span>
+                            <h3 class="cappuccino">Brownie</h3>
+                        </div>
+                        <p class="avaliacao">Extraordinário - 2/4</p>
+                    </header>
+
+                    <p class="descricao">Dê um toque ao seu dia com nossos irrestíveis brownies. Umas explosão de sabor em cada mordida! 🍫#MomentoDoce</p>
+                    <div class="author">
+                        <img src="assets/Avatar (1).png" alt="Luana Andrade">
+                        <span class="">Luana Andrade</span>
+                    </div>
+                </div>
+              </div>
+
+              <!-- 3° Receita -->
+              <div class="card">
+                <div class="card-2">
+                    <header class="card-3">
+                        <div class="legend">
+                            <span class="news amarelo">em alta🔥</span>
+                            <h3 class="cappuccino">Expresso</h3>
+                        </div>
+                        <p class="avaliacao">Extraordinário - 3/4</p>
+                    </header>
+
+                    <p class="descricao">Desperte seus sentidos com a excelência do nosso café. Uma experiência única, uma xícara por vez. ☕#CaféPerfeito</p>
+                    <div class="author">
+                        <img src="assets/Avatar(2).jpg" alt="Bruna Tavares">
+                        <span class="">Bruna Tavares</span>
+                    </div>
+                </div>
+              </div>
+
+              <!-- 4° Receita -->
+              <div class="card">
+                <div class="card-2">
+                    <header class="card-3">
+                        <div class="legend">
+                            <span class="news amarelo">em alta🔥</span>
+                            <h3 class="cappuccino">Bolo de Cenoura</h3>
+                        </div>
+                        <p class="avaliacao">Extraordinário - 4/4</p>
+                    </header>
+
+                    <p class="descricao">Um pedaço de céu em cada fatia: experimente nosso Bola de Cenoura com Cobertura de Chocolate. Uma tentação irresistível! #DelíciaDoDia</p>
+                    <div class="author">
+                        <img src="assets/Avatar(3).png" alt="Kaue Vitoriano">
+                        <span class="">Kaue Vitoriano</span>
+                    </div>
+                </div>
+              </div>
+         </article>
+     </section>
+    </main>
+    <!-- ___________________________ -->
+     <!-- FOOTER (RODAPÉ) -->
+      <footer>
+        <p class="footer-container">Copyright &lt; SESISENAI /&gt; 2025</p>
+        <p class="footer-content">Feito com muito 💗 e café por Maria Eduarda!!</p>
+      </footer>
+     <!-- ______________________________________ -->
+      <!-- FOOTER (rodapé) -->
+       <script src="efeitos.js"></script>
+
 </body>
 </html>
+
+
+
 
