--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <ul class="menu" id="MenuItems">
                 <li><a>HOME</a></li>
                 <li>
-                    <a href="#receitas" style="text-decoration: none; color: #FFF2E780 ;" onmouseover="this.style.color='#FFF2E780';">RECEITAS</a>
-                    
+                    <a href="#receitas" style="text-decoration: none; color: #FFF2E780;" onmouseover="this.style.color='#fff';" onmouseout="this.style.color='#FFF2E780';">
+                        RECEITAS
+                    </a>
                 </li>
 
                 <li><a>NOVIDADES</a></li>
